--- a/Validation/Validate_power_simple.Rmd
+++ b/Validation/Validate_power_simple.Rmd
@@ -68,67 +68,48 @@ In this section, we validate power results for different definitions of power, _
 
 Each subsection of the power validation below is a variation of correlation between outcomes, __rho__ & the ratio of __false nulls__ in M outcomes. For more details on input parameters, please refer to the paper or the Appendix section at the bottom of this markdown.
 
-### n.j = 100, M = 3,numFalse = M, J = 20, rho = (0.5, 0.5, 0.5), MDES = (0.125, 0.125, 0.125), R2 = (0,0,0)
-
 If you are previewing this in html, please click on the code section to review more detailed parameters.
 
-```{r rho0.5numFalseMSpecs01}
-# ICC needs to be zero for constant and fixed effets
-design <- c("Blocked_i1_2c")
-M <- 3
-MDES <- rep(0.125, M) 
-rho <- c(0.5)
-J = 20 
-n.j = 100 
-p.j <- 0.5 
-p.j.range <- rep(0.5,J) 
-theta <- matrix(0,M,M) 
-diag(theta) <- 0 
-omega <- rep(0,M) 
-Gamma.00 <- rep(0,M) 
-ICC <- rep(0, M) 
-R2.2 <- rep(0,M)  
-R2.1 <- rep(0,M) 
-```
 
 ```{r}
-# generate simulation parameters list to feed into simulations
+# list of simulation parameters
 sim.params.list = list(
     S = 10           # Number of samples for Monte Carlo Simulation
   , B = 2            # Number of samples for WestFall-Young. The equivalent is snum in our new method.
   , maxT = FALSE     # ?
   , alpha = 0.05     # significance level
+  , p.j = 0.5        # binomial assignment probability
   , tnum = 10000     # Number of test statistics (samples) for all procedures other than Westfall-Young
   , ncl = 2          # Number of computer clusters (max on RStudio Server is 16)
-  , procs = c("Bonferroni", "BH", "Holm")
-  , runSim = TRUE    # if TRUE, we will re-run the simluation. if FALSE, we will pull previous run result.
-  , runPump = TRUE  # if TRUE, we will run method from our package. if FALSE, we will pull previous run result.
+  , procs = c("Bonferroni", "BH", "Holm") # multiple testing procedures to compute power for 
+  , runSim = TRUE    # if TRUE, we will re-run the simulation. if FALSE, we will pull previous run result.
+  , runPump = TRUE   # if TRUE, we will run method from our package. if FALSE, we will pull previous run result.
   , check = FALSE    # run checks such as printing out quantities
 )
 ```
 
 ```{r}
-
 M <- 3
+J <- 20
+K <- 2
+n.j <- 100
+N <- n.j * J
+rho.default <- 0.5
 # create simple simulation setup, although this can generalize to be as complicated as you want!
 # assuming equal sized schools in equal sized districts, generate
 # school and district assignments S.j and S.k
-assignment.vecs <- gen_simple_assignments(J = 20, K = 2, n.jk = 100)
+assignment.vecs <- gen_simple_assignments(J = 20, K = 2, n.j = 100)
 
 ##### covariates
-rho.D.scalar <- rho.X.scalar <- rho.C.scalar <- 0.5
+rho.D.scalar <- rho.X.scalar <- rho.C.scalar <- rho.default
 rho.D <- gen.corr.matrix(M, rho.D.scalar)
 rho.X <- gen.corr.matrix(M, rho.X.scalar)
 rho.C <- gen.corr.matrix(M, rho.C.scalar)
-xi.scalar <- delta.scalar <- gamma.scalar <- 1
-xi <- rep(xi.scalar, M) 
-delta <- rep(delta.scalar, M) 
-gamma <- rep(gamma.scalar, M) 
 
 ##### random effects and impacts
-rho.w.scalar <- rho.z.scalar <- 0.5
-rho.u.scalar <- rho.v.scalar <- 0.5
-rho.r.scalar <- 0.5
+rho.w.scalar <- rho.z.scalar <- rho.default
+rho.u.scalar <- rho.v.scalar <-rho.default
+rho.r.scalar <- rho.default
 rho.w <- gen.corr.matrix(M, rho.w.scalar)
 rho.z <- gen.corr.matrix(M, rho.z.scalar)
 rho.u <- gen.corr.matrix(M, rho.u.scalar)
@@ -137,50 +118,43 @@ rho.r <- gen.corr.matrix(M, rho.r.scalar)
 
 theta.wz <- theta.uv <- matrix(0, M, M)
 
-eta0.sq.scalar <- eta1.sq.scalar <- 1
-eta0.sq <- rep(eta0.sq.scalar, M)
-eta1.sq <- rep(eta1.sq.scalar, M)
-
-tau0.sq.scalar <- tau1.sq.scalar <- 1
-tau0.sq <- rep(tau0.sq.scalar, M)
-tau1.sq <- rep(tau1.sq.scalar, M)
-
-# generate simulation parameters list to feed into simulations
-model.params.list <- list(
+user.params.list <- list(
   M = 3
-  , S.j = assignment.vecs[['S.j']]
-  , S.k = assignment.vecs[['S.k']]
+  , S.j = assignment.vecs[['S.j']]        # N-length vector of indiv school assignments i.e. (1,1,2,2,3,3)
+  , S.k = assignment.vecs[['S.k']]        # N-length vector of indiv district assignments i.e. (1,1,1,2,2,2)
+  , J = J                                 # number of districts
+  , K = K                                 # number of schools
+  , N = N                                 # number of individuals
+  , n.j = n.j                             # number of individuals per school
+  , rho.default = 0.5                     # default correlation value
   ################################################## level 3
-  , Xi0 = 0                                        # scalar grand mean outcome under no treatment
-  , Xi1 = 1                                        # scalar grand mean impact
-  , xi = xi                                        # M-vector of coefficient of district covariates
-  , rho.D = rho.D                                  # MxM correlation matrix of district covariates
-  , eta0.sq = eta0.sq                              # M-vector of variances of district random effects
-  , eta1.sq = eta1.sq                              # M-vector of variances of district impacts
-  , rho.w = rho.w                                  # MxM matrix of correlations for district random effects
-  , rho.z = rho.z                                  # MxM matrix of correlations for district impacts
-  , theta.wz = theta.wz                            # MxM matrix of correlations between district random effects and impacts
+  , Xi0 = 0                               # scalar grand mean outcome under no treatment
+  , MDES = rep(0.125, M)                  # minimum detectable effect size                              
+  , R2.3 = rep(0, M)                      # percent of district variation explained by district covariates
+  , rho.D = rho.D                         # MxM correlation matrix of district covariates
+  , ICC.3 = 0.3                           # district intraclass correlation	
+  , omega.3 = 0.5                         # ratio of district effect size variability to random effects variability
+  , rho.w = rho.w                         # MxM matrix of correlations for district random effects
+  , rho.z = rho.z                         # MxM matrix of correlations for district impacts
+  , theta.wz = theta.wz                   # MxM matrix of correlations between district random effects and impacts
   ################################################## level 2
-  , delta = delta                                  # M-vector of coefficients of school covariates
-  , rho.X = rho.X                                  # MxM correlation matrix of school covariates
-  , tau0.sq = tau0.sq                              # M-vector of variances of school random effects
-  , tau1.sq = tau1.sq                              # M-vector of variances of school impacts
-  , rho.u = rho.u                                  # MxM matrix of correlations for school random effects
-  , rho.v = rho.v                                  # MxM matrix of correlations for school impacts
-  , theta.uv = theta.uv                            # MxM matrix of correlations between school random effects and impacts
+  , R2.2 = rep(0, M)                      # percent of school variation explained by school covariates
+  , rho.X = rho.X                         # MxM correlation matrix of school covariates
+  , ICC.2 = 0.3                           # school intraclass correlation	
+  , omega.2 = 0.5                         # ratio of school effect size variability to random effects variability
+  , rho.u = rho.u                         # MxM matrix of correlations for school random effects
+  , rho.v = rho.v                         # MxM matrix of correlations for school impacts
+  , theta.uv = theta.uv                   # MxM matrix of correlations between school random effects and impacts
   ################################################## level 1
-  , gamma = gamma                                  # M-vector of coefficients of individual covariates
-  , rho.C = rho.C                                  # MxM correlation matrix of individual covariates
-  , rho.r = rho.r                                  # MxM matrix of correlations for individual residuals 
+  , R2.1 = rep(0, M)                      # percent of indiv variation explained by indiv covariates
+  , rho.C = rho.C                         # MxM correlation matrix of individual covariates
+  , rho.r = rho.r                         # MxM matrix of correlations for individual residuals 
 )
-
-user.params.list <- model.params.list
-user.params.list[['MDES']] <- rep(0.125, M)
-user.params.list[['R2.1']] <- rep(0, M)
-user.params.list[['rho']] <- 0.5
 ```
 
 
+### n.j = 100, M = 3, numFalse = M, J = 20, rho = (0.5, 0.5, 0.5), MDES = (0.125, 0.125, 0.125), R2.2 = (0,0,0)
+# banana question: what is numfalse?
 
 `r colorize("Individual Statistical power is estimated to be around 0.8. Please check the table below for estimations of other definitions of statistical power. Across all power definitions, estimation results across the __PUMP__ package, __Monte Carlo Simulation__ results and __PowerUp__ package are about the same as detailed below.", "green")`
 
@@ -189,11 +163,11 @@ user.params.list[['rho']] <- 0.5
 ```{r rho0.5numFalseMRun01}
 blocked_i1_2c_compare_results <- validate_power_blocked_i1_2cfr(
   user.params.list = user.params.list, sim.params.list = sim.params.list, 
-  design = design
+  design = "Blocked_i1_2c"
 )
 pander::pandoc.table(
   blocked_i1_2c_compare_results,
-  paste0("PowerSimulation_", "rho_", rho,"_falseNull_",M),
+  paste0("PowerSimulation_", "rho_", rho.default,"_falseNull_", user.params.list[['M']]),
   style = "grid", split.tables = 100
 )
 ```
