--- a/Validation/Validate_power_blocked_i1_2c.Rmd
+++ b/Validation/Validate_power_blocked_i1_2c.Rmd
@@ -35,6 +35,7 @@ knitr::opts_chunk$set(cache = TRUE, warning = FALSE, message = FALSE, echo = FAL
 ```
 
 ```{r libraries}
+library(here)
 library(MASS)
 library(nlme)
 library(pander)    # For good table format
@@ -143,7 +144,7 @@ user.params.list <- list(
   ################################################## level 2: schools
   , R2.2 = rep(0, M)                      # percent of school variation explained by school covariates
   , rho.X = default.rho.matrix            # MxM correlation matrix of school covariates
-  , ICC.2 = rep(0, M)                     # school intraclass correlation	
+  , ICC.2 = rep(0.5, M)                   # school intraclass correlation	
   , omega.2 = 0                           # ratio of school effect size variability to random effects variability
   , rho.u = default.rho.matrix            # MxM matrix of correlations for school random effects
   , rho.v = default.rho.matrix            # MxM matrix of correlations for school impacts
